--- a/app/globals.css
+++ b/app/globals.css
@@ -123,3 +123,9 @@
 .cl-userButtonPopoverActionButton {
   color: white;
 }
+.meeting-list-wrapper{
+  width: 100%;
+  display: grid;
+  gap: 1rem;
+  grid-template-columns: repeat(auto-fill,minmax(270px,1fr));
+}
